paper_experimental_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c2/sample_003/target.compile.log
error[E0505]: cannot move out of `p` because it is borrowed
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c2/sample_003/target.rs:5:14
  |
3 |     let p = &mut x;
  |         - binding `p` declared here
4 |     let pc = p as &i32;
  |              - borrow of `*p` occurs here
5 |     let pv = p;
  |              ^ move out of `p` occurs here
...
8 |     if *pc != 17 {
  |        --- borrow later used here

error[E0382]: borrow of moved value: `p`
 --> benchmark_results/2026-05-06T18-03-03/grok-code-fast-1/conversions/pointers_c2/sample_003/target.rs:6:15
  |
3 |     let p = &mut x;
  |         - move occurs because `p` has type `&mut i32`, which does not implement the `Copy` trait
4 |     let pc = p as &i32;
5 |     let pv = p;
  |              - value moved here
6 |     let pcv = p as &i32;
  |               ^ value borrowed here after move

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0382, E0505.
For more information about an error, try `rustc --explain E0382`.